fixed css for popup, text now wraps

--- a/styles/custom.module.css
+++ b/styles/custom.module.css
@@ -261,10 +261,6 @@ img.Logo{
 
 }
 
-.cardTextBody{
-
-}
-
 .leftSection{
   text-align: left;
 }
@@ -320,10 +316,11 @@ img.Logo{
   margin: auto;  
   border-radius: 20px;  
   background: white;  
-  white-space: nowrap;
-  overflow-y: visible;
   z-index: 100;
   height: 80vh;
   overflow-y: scroll;
 }
 
+.popup_card{
+  padding: 1rem;
+}
